# IterCluster

./: IterCluster-MCL.sh  README.md  README2  get_matrix_run.sh  profile  run.sh  step_0_split_barcode.sh  step_1_filter.sh  step_2_Aln_bar_pos.sh  step_3_build_matrix_IterCluster.sh  step_4_evaluate.sh
DataPrepare/: 01.split_10X_reads_new.pl  01.split_barcode_stlfr.pl  02.SOAPfilter_10x.sh  02.SOAPfilter_stlfr.sh  05.aln_run.sh  run.sh
Evaluate/: 02.count_loss_barcode.pl  03.evaluate_cluster.pl  04.MclIterCluster_evaluate.pl  06.get_barcode_position.pl  07.MclIterCluster_evaluate_v2.pl
FalseRemove/: Makefile  main.cpp
FalseRemove/src/: Barcode2Read.cpp  ClusterControl.cpp  ClusterOperator.cpp  ClusterOperator.h  LoadRead.h  ReadsInBinary.h  Util.cpp  Util.h  gzstream.cpp
IterCluster-MCL/: build.sh
IterCluster-MCL/src/: CMakeLists.txt  SeedControl.cpp  Timer.h  global.h
IterCluster_algorithm/FalseRemove/: CMakeLists.txt  build.sh
IterCluster_algorithm/FalseRemove/src/: Barcode2Read.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterControl.h  LoadRead.cpp  SeqOperator.cpp  SeqOperator.h  SeqReader.cpp  gzstream.h  main.cpp
IterCluster_algorithm/IterCluster-MCL/: CMakeLists.txt  main.cpp
IterCluster_algorithm/IterCluster-MCL/src/: Seed.cpp  Seed.h  SeedControl.h  global.cpp
IterCluster_algorithm/LFR_matrix_bulid/: count.sh
IterCluster_algorithm/LFR_matrix_bulid/src/: CMakeLists.txt  Global.h  IndexKmer.cpp  Kmer2BarcodeHash.cpp  KmerHash.h  Logic.h  Read2KmerCount.cpp  UniqueKmerArray.h  main.cpp  make.sh
IterCluster_algorithm/LFR_matrix_bulid/src/IOUtils/: BC2UK_BinaryReader.cpp  BC2UK_BinaryWriter.h  BQ2UKReader.h  BQ2UKWriter.h  BQMatrixWriter.cpp  BQMatrixWriter.h  LFRReader.h
IterCluster_algorithm/LFR_matrix_bulid/src/Utils/: MultiThread.h  String.h
IterCluster_algorithm/LFR_matrix_bulid/src/test/: BQ2KmerWR_test.cpp  KmerBuffer_test.cpp  KmerHash_test.cpp  LFRReader_test.cpp  Test.h  compiler.cmake
LFR_matrix_bulid/: .gitignore
LFR_matrix_bulid/example/: 02.data_prepare(1).pl  03.sample_relation(1).pl  cmp.cpp  run.sh
LFR_matrix_bulid/split/: run.sh  run01.sh  run02.sh  run04.sh
LFR_matrix_bulid/src/: BarcodeMutrix.cpp  CMakeLists.txt  Global.cpp  Makefile  Read2KmerBuffer.h  test.cpp
Script/: 00.split_barcode_PEXXX_42_reads_stlfr.pl  01.Fastq_QC.sh  03.Reads_filter.pl  04.kmer.sh  07.Single_MclIterCuster_evaluate.pl
data/: lib.list
(+15 files in other folders)
